client/src/components/Comments/CommentSection/CommentSection.module.css
.container {
    position: relative;
    max-width: 1000px;
    margin: 3em auto;
    padding: 20px;
    background-color: #f9f9f9;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.container::before {
    display: block;
    content: "";
    width: 20px;
    height: 20px;
    position: absolute;
    border-radius: 50%;
    background-color: white;
    left: 50%;
    transform: translateX(-50%);
    top: -30px;
}

.container h3 {
    margin-bottom: 1em;
}

